# axum-template

./: Cargo.toml  cargo-generate.toml  configuration.yaml
migrations/: 20240531164512_users_table.up.sql
queries/: users.sql
src/: configuration.rs  cornucopia.rs  lib.rs  main.rs  startup.rs  users.rs
src/routes/: mod.rs
templates/: base.html
