[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-login = "0.15"
hyper = "1.0"

tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

password-auth = "1.0.0"

tokio = { version = "1.0", features = ["full"] }

thiserror = "1"
anyhow = "1"

postgres-types = { version = "0.2", features = ["derive"] }
cornucopia_async = { version = "0.6", features = ["with-serde_json-1"] }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-time-0_3",
] }
futures = "0.3"
deadpool-postgres = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
time = "0.3"

config = "0.14"

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4"
